fixed the alignment on the contact form + adding media queries to make the form responsive

--- a/src/Pages/Contact.css
+++ b/src/Pages/Contact.css
@@ -21,9 +21,10 @@ h3 {
 }
 
 .form-container {
-  display: block;
+  display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 form {
   background-image: linear-gradient(#f7f5de, #d4fff2);
@@ -69,15 +70,7 @@ textarea {
   justify-content: center;
   align-items: center;
   margin-bottom: 1rem;
-}
-
-#submit-btn {
-  border-radius: 0.5rem 1rem;
-  width: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-left: 9rem;
+  font-family: "Roboto Condensed", sans-serif;
 }
 
 #submit-btn {
@@ -87,5 +80,29 @@ textarea {
   font-weight: 900;
   background-color: #eacb65;
   cursor: pointer;
-  padding: 0.3rem;
+  padding: 0.5rem;
+  border-radius: 0.5rem 1rem;
+  width: 40%;
+  margin: 1rem auto;
+  display: block;
+}
+#submit-btn:hover {
+  background-color: #cab264;
+  text-decoration: none;
+  transition: all 300ms ease-in-out;
+  width: 40%;
+}
+
+/* Media query for mobile devices */
+@media only screen and (max-width: 600px) {
+  form {
+    width: 90%; /* Adjust the width for smaller screens */
+  }
+}
+
+/* Media query for mobile devices */
+@media only screen and (max-width: 768px) {
+  form {
+    width: 90%; /* Adjust the width for smaller screens */
+  }
 }
